--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,9 +31,9 @@ jobs:
       DB_USER: postgres
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       DB_HOST: localhost
-      DB_PORT: 5432
-      FLASK_APP: app/main.py
+      FLASK_APP: app/main.py  # Ensure this path is correct
       FLASK_ENV: development
+      ENV_FILE: app/.env
 
     steps:
     - name: Checkout code
@@ -48,7 +48,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    
+
+    - name: Load environment variables
+      run: |
+        export $(cat app/.env | xargs)
+
     - name: Run tests
       run: |
         cd app
