--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,6 +54,7 @@ jobs:
         export $(cat app/.flaskenv | xargs)
 
     - name: Run tests
+      working-directory: ./app
       run: |
         export FLASK_APP=main.py
         flask db upgrade
