--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,9 +46,16 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Wait for PostgreSQL to be ready
+      run: |
+        until pg_isready -h localhost -p 5432 -U postgres; do
+          echo "Waiting for PostgreSQL to be ready..."
+          sleep 1
+        done
+
     - name: Load environment variables
       run: |
-        cp .env app/.env
+        cp .env.docker app/.env  # Use the Docker-specific environment file
         cp .flaskenv app/.flaskenv
         export $(cat app/.env | xargs)
         export $(cat app/.flaskenv | xargs)
@@ -56,7 +63,7 @@ jobs:
     - name: Run tests
       working-directory: ./app
       run: |
-        export FLASK_APP=app/main.py
+        export FLASK_APP=main.py
         flask db upgrade
         pytest
 
