--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,6 +31,7 @@ jobs:
       DB_USER: postgres
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       DB_HOST: localhost
+      DB_PORT: 5432
 
     steps:
     - name: Checkout code
@@ -55,7 +56,7 @@ jobs:
 
     - name: Load environment variables
       run: |
-        cp .env.docker app/.env  # Use the Docker-specific environment file
+        cp .env app/.env  
         cp .flaskenv app/.flaskenv
         export $(cat app/.env | xargs)
         export $(cat app/.flaskenv | xargs)
