--- a/.env
+++ b/.env
@@ -5,4 +5,11 @@ SECRET_KEY=your_secret_key
 DB_NAME=ssdDatabase
 DB_USER=postgres
 DB_PASSWORD=sql123
-DOCKER_USERNAME=bara120
+
+# Local environment variables
+LOCAL_DB_HOST=127.0.0.1
+LOCAL_DB_PORT=5433
+
+# Docker environment variables
+DOCKER_DB_HOST=db
+DOCKER_DB_PORT=5432
