--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     command: flask run --host=0.0.0.0 --port=80
     environment:
       FLASK_APP: app/main.py
-      FLASK_ENV: production  
+      FLASK_ENV: production  #set for production
       SECRET_KEY: ${SECRET_KEY}
       DB_NAME: ${DB_NAME}
       DB_USER: ${DB_USER}
